# Meine_Freund

./: .gitignore
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: quote.py  routes.py
backend/app/core/: config.py
