[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meine-freund-backend"
version = "0.1.0"
description = "FastAPI backend for Meine Freund"
authors = [{ name = "Meine Freund Team" }]
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109,<1.0",
    "uvicorn>=0.23,<1.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "watchfiles>=0.21,<1.0"
]

[tool.pip-tools]
generate-hashes = false
strip-extras = true
